menambahan page skill di landing page

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <label class="logo">MyPortofolio</label>
       <ul>
         <li><a class="active" href="#home">Home</a></li>
-        <li><a href="#">About</a></li>
         <li><a href="#experience">Experience</a></li>
+        <li><a href="#split">Skill</a></li>
       </ul>
     </nav>
     <!--content-->
@@ -35,7 +35,7 @@
     <!--section: experience-->
     <section id="experience">
       <div class="exp">
-        <h2>Experience</h2>
+         <marquee behavior="" direction="left">Experience</marquee>
       </div>
     <div class="grid-container">
       <div class="card" id="omron">
@@ -64,14 +64,62 @@
       </div>
     </div>
     </section>
-    <!--About-->
-    <section>
-      <div class="container">
-          <div class="about-content">
-            <h3>About MySelf</h3>
-            <p></p>
+    <div class="exp">
+      <marquee behavior="" direction="">Skill</marquee>
+    </div>
+
+    <!--Skill-->
+    <section id="split">
+      <div class="screen">
+        <div class="box">
+          <div class="imgbx">
+            <img src="software.jpeg">
           </div>
+          <h2>Software</h2>
+          <br>
+          <a href="#is">Read More</a>
+          <div class="isi" id="is">
+            <div class="imgbx">
+              <img src="software.jpeg">
+            </div>
+            <h2>Software</h2>
+            <br>
+            <ul>
+              <li>1. Python(Flask)</li>
+              <br>
+              <li>2. C/C++</li>
+              <br>
+              <li>3. HTML/CSS</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="screen"> 
+        <div class="box">
+          <div class="imgbx">
+            <img src="hardware.jpg">
+          </div>
+          <h2>Hardware</h2>
+          <br>
+          <a href="#is">Read More</a>
+          <div class="isi" id="is">
+            <div class="imgbx">
+              <img src="hardware.jpg">
+            </div>
+            <h2>Hardware</h2>
+            <br>
+            <ul>
+              <li>1. Arduino</li>
+              <br>
+              <li>2. Raspberry</li>
+              <br>
+              <li>3. PCB Design</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
+
+
   </body>
 </html>
