--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div id="content">
         <div class="container">
             <h1>Welcome to <br> <span class="text-primary"> My World </span></h1>
-            <a href="#about" class="button">FIND OUT</a>
+            <a href="banner.html" class="button">FIND OUT</a>
         </div>
       </div>
     </header>
